[Integration tests] Updated and expanded existing tests for TicketController. [Integration tests] Implemented use of Test Containers. [Functionality] Implemented protection against adding replies to closed tickets. [Privileges] Role privileges in TicketController have been changed.